2007-03-05  Brooks Moses  <brooks.moses@codesourcery.com>

	* lang.opt: Add -fmax-errors= option.
	* gfortran.h (gfc_option_t): Add max_errors element.
	* options.c (gfc_init_options): Set max_errors default value
	to 25.
	(gfc_handle_options): Check -fmax_errors value, assign to
	gfc_option.max_errors.
	* error.c (gfc_increment_error_count): New function, which
	also checks whether the error count exceeds max_errors.
	(gfc_notify_std): Use it.
	(gfc_error): Use it.
	(gfc_error_now): Use it.
	(gfc_error_check): Use it.
	(gfc_warning): Reorder to match trunk.
	* invoke.texi: Added documentation for -fmax-errors option.

2007-03-05  Brooks Moses  <brooks.moses@codesourcery.com>

	* check.c (gfc_check_kill_sub): Add checks for non-scalar
	arguments.

2007-03-05  Brooks Moses  <brooks.moses@codesourcery.com>

	* lang.opt (-fmodule-private): Remove option.
	* gfortran.h (gfc_option_t): Remove module_access_private flag.
	* options.c (gfc_init_options): Remove initialization for it.
	(gfc_process_option): Remove handling for -fmodule-private.
	* module.c (gfc_check_access): Add comments, remove check for
	gfc_option.flag_module_access_private.

2007-03-05  Tobias Burnus  <burnus@net-b.de>

	PR fortran/30968
	* primary.c (next_string_char): Correct reading a character
	after the delimiter.
	(match_string_constant): Print warning message only once.

2007-03-05  Brooks Moses  <brooks.moses@codesourcery.com>

	* simplify.c (gfc_simplify_ibclr): Fix POS comparison.
	(gfc_simplify_ibset): Same.

2007-03-04  Brooks Moses  <brooks.moses@codesourcery.com>

	* check.c (same_type_check): Typo fix in comment.

2007-03-01  Tobias Schlueter  <tobi@gcc.gnu.org>

	Backport from trunk
	PR fortran/29441
	* intrinsic.c (gfc_intrinsic_func_interface): Always check if
	intrinsic is allowed in initialization expression.

2007-03-01  Paul Thomas  <pault@gcc.gnu.org>

	Backport from trunk
	PR fortran/30660
	* resolve.c (pure_function, resolve_function): Initialize name to